--- a/views_html/index.html
+++ b/views_html/index.html
@@ -1,99 +1,11 @@
 <%- include('./layouts/header.html') -%>
 
 <div class="ui container container-body">
-  <div id="app">
-    <div class="ui piled segment">
-      <div class="ui container">
-        <!-- ToDo's Form -->
-        <validator name="validationTodo">
-          <h4 class="ui header">Nueva Tarea</h4>
-          <form class="ui form" novalidate>
-            <div class="fields">
-              <!-- Title -->
-              <div class="eight wide field" v-bind:class="{ 'error' : !validation.title }">
-                <label>Nombre</label>
-                <input type="text" 
-                       inital="off"
-                       placeholder="Ingrese la nueva Tarea" 
-                       tabindex="1" 
-                       v-model="todo.title"
-                       v-validate:title="{ required: true }"/>
-              </div>
-              <!--/ Title -->
-              <!-- State -->
-              <div class="three wide field">
-                <label>Estado</label>
-                <input type="checkbox" style="display: none;" v-model="todo.state"/>
-                <div class="ui left pointing red basic label">Pendiente</div>
-              </div>
-              <!-- /State -->
-              <!-- Buttons -->
-              <div class="four wide field container-flex-center">
-                <input type="button" value="Nuevo" v-on:click="newTodo(todo)" class="ui big button basic item-flex-center"/>
-                <input type="button" value="Guardar" v-on:click="saveTodo(todo)" class="ui big button green item-flex-center"/>
-              </div>
-              <!-- /Buttons -->
-            </div>
-            <!-- Description -->
-            <div class="field" v-bind:class="{ 'error' : !validation.description }">
-              <label>Descripcion</label>
-              <textarea v-model="todo.description" 
-                        inital="off"
-                        tabindex="2" 
-                        required="required"
-                        v-validate:description="{ required: true }">
-              </textarea>
-            </div>
-            <!-- /Description -->
-          </form>
-        </validator>
-        <!-- /ToDo's Form -->
-      </div>
-    </div>
-    <div class="todos ui piled segment">
-      <h4 class="ui header">Pendientes</h4>
-      <div class="ui relaxed aligned animated divided list">
-        <div v-for="todo in todos | filterBy false in 'state' | orderBy 'id' -1" 
-             v-on:click="editTodo(todo)" 
-             class="item">
-           <!-- Avatar -->
-          <img src="/public/images/ninja-simple.png" class="ui avatar image"/>
-           <!-- /Avatar -->
-          <div class="middle aligned content">
-            <div class="header">
-              {{ todo.title }}
-            </div><span class="item-text">
-              {{ todo.description }}</span>
-          </div>
-          <div class="ui left pointing red basic label">Pendiente</div>
-          <div class="right floated content">
-            <button v-on:click="removeTodo(todo)" class="ui large icon red basic button"><i class="minus circle icon"></i></button>
-            <button v-on:click="editTodo(todo)" class="ui large icon teal basic button"><i class="write icon"></i></button>
-            <button v-on:click="doneTodo(todo)" class="ui large icon green basic button"><i class="checkmark icon"></i></button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="todos ui piled segment">
-      <h4 class="ui header">Realizadas</h4>
-      <div class="ui relaxed aligned animated divided list">
-        <div v-for="todo in todos | filterBy true in 'state' | orderBy 'id' -1" class="item"><img src="/public/images/ninja-simple.png" class="ui avatar image"/>
-          <div class="middle aligned content">
-            <div class="header">
-              
-              {{ todo.title }}
-            </div><span class="item-text">
-              
-              {{ todo.description }}</span>
-          </div>
-          <div class="ui left pointing green basic label">Hecho</div>
-          <div class="right floated content">
-            <button v-on:click="reverseTodo(todo)" class="ui large icon olive basic button"><i class="undo icon"></i></button>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div id="appTodo">
+    <router-view></router-view>
   </div>
 </div>
 
+<%- include('./partials/todo.html') -%>
+<%- include('./partials/sign-in.html') -%>
 <%- include('./layouts/footer.html') -%>
