Add simple auth by tokens

--- a/views_html/index.html
+++ b/views_html/index.html
@@ -6,6 +6,7 @@
   </div>
 </div>
 
+<%- include('./partials/navbar.html') -%>
 <%- include('./partials/todo.html') -%>
 <%- include('./partials/sign-in.html') -%>
 <%- include('./layouts/footer.html') -%>
