--- a/views_html/index.html
+++ b/views_html/index.html
@@ -1,5 +1,12 @@
 <%- include('./layouts/header.html') -%>
 
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+
 <div class="ui container container-body">
   <div id="appTodo">
     <router-view></router-view>
