fb bot messenger test token

--- a/views_html/index.html
+++ b/views_html/index.html
@@ -1,11 +1,11 @@
 <%- include('./layouts/header.html') -%>
 
-<div
+<!--<div
   class="fb-like"
   data-share="true"
   data-width="450"
   data-show-faces="true">
-</div>
+</div>-->
 
 <div class="ui container container-body">
   <div id="appTodo">
